# RAGWire

./: .env.example  .gitignore  LICENSE  README.md  SETUP_COMPLETE.md  config.example.yaml  config.yaml  llms-full.txt  llms.txt  metadata.example.yaml  metadata.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml
docs/: AGENT.md  anthropic.md  api_reference.md  cookbook.md  custom_metadata.md  fastembed.md  gemini.md  groq.md  huggingface.md  index.md  llms.txt  metadata.md  metadata_schemas.md  ollama.md  openai.md  rag_agent.md  setup.md  tutorial.md
docs/architecture/: component_map.md  ingestion_pipeline.md  metadata_extraction.md  overview.md  retrieval_pipeline.md
docs/cookbook/: filtered_chatbot.md  inspect_collection.md  langsmith.md  local_storage.md  logging.md  mmr.md  multi_collection.md  preview_documents.md  qdrant_cloud.md  switch_providers.md  tune_retrieval.md  update_documents.md
examples/: basic_usage.py  custom_metadata_usage.py  finance_metadata.yaml  metadata.yaml  rag_agent.py
examples/tutorials/: 00_series_overview.md  01_streamlit_financial_qa.md  02_streamlit_research_assistant.md  03_chainlit_rag_chatbot.md  04_langchain_agent_sec.md  05_langgraph_rag_pipeline.md  06_langgraph_self_correcting.md  07_crewai_research_team.md  08_crewai_investment_report.md  09_deepagent_doc_intelligence.md  10_langchain_customer_support.md  11_crewai_streamlit_competitive.md  12_langgraph_streamlit_workflow.md  13_chainlit_multiuser_chat.md  14_langgraph_supervisor.md  15_fastapi_production_app.md
ragwire/: __init__.py
ragwire/core/: __init__.py  config.py  pipeline.py
ragwire/embeddings/: __init__.py  factory.py
ragwire/loaders/: __init__.py  markitdown_loader.py
ragwire/metadata/: __init__.py  extractor.py  schema.py
ragwire/processing/: __init__.py  hashing.py  splitter.py
ragwire/retriever/: __init__.py  hybrid.py
ragwire/utils/: __init__.py  logging.py
ragwire/vectorstores/: __init__.py  qdrant_store.py
tests/: test_imports.py
